Bug 542561 - [12][select] Selection Support for Switch Expressions
Change-Id: Ia84d843fc2f8a9a311c886d4edad9a94dbab85a8
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>